--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="my-wrapper valign-wrapper center-align">
         <div class="row">
           <div class="col s20 offset-l3">
-            <div class="card horizontal">
+            <div class="card horizontal hoverable">
               <div class="card-stacked">
                 <div class="card-content">
                   <p>Information about Ph.D. Review system goes here! Needs to lightly larger to look good
