Revert "Added Student Review view Code"
This reverts commit 11d84f9d4557da5ad49317ca477b79f3cde316b6.

--- a/javascript.html
+++ b/javascript.html
@@ -1,6 +1,15 @@
 <script>
   function resetProfileFields() {  
-
+//     var current_date = new Date();
+//     var current_year = current_date.getFullYear();
+//     
+//     var year = 2000;
+//     var till = current_year;
+//     var options = "";
+//     for(var y=year; y<=till; y++){
+//     options += "<option>"+ y +"</option>";
+//     }
+     
      document.getElementById("cv").value = "";
      google.script.run.withSuccessHandler(onSuccess).getProfileInformation();
   }
@@ -111,16 +120,15 @@
     M.updateTextFields()
 
   }
-
-function check_cv(){
-  var b = document.getElementById('cv_url');
-  if(b.href==""){
-    alert("CV not Uploaded");
+  
+  function openPDF(){
+    var cv_url = document.getElementById('cv_url').href;
+    if (cv_url!="#"){
+      window.open(pdf);
+      return false;
+    }
   }
-}
-
-
-
+  
   // below from views/js/app.js
   
   
