--- a/review_monitor.html
+++ b/review_monitor.html
@@ -132,7 +132,7 @@
       <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       
-      <?!= include("javascript") ?>
+      <?!= include("student_info_javascript") ?>
       <?!= include("advisor_review_js") ?>
     </body>
   </html>
