student details and student reviews implemented

--- a/review_monitor.html
+++ b/review_monitor.html
@@ -31,7 +31,7 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li class="active"><a href="<?= getScriptUrl();?>?v=faculty_view">Student Search</a></li>
+              <li class="active"><a href="<?= getScriptUrl();?>?v=faculty_view">Review Monitor</a></li>
               <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
@@ -56,12 +56,14 @@
                 <input id="uin" type="text" class="validate" data-length="10">
                 <label for="uin">UIN</label>
               </div>
-              <div class="input-field col s2">
+              
+              <!--div class="input-field col s2">
                 <select id="year">
                   <option value="" disabled selected>Choose Year</option>
                 </select>
                 <label>Select Review Year</label>
-              </div>
+              </div-->
+              
             </div>
             <div class="row">
               <div class="center">
