added navigation bar to student details and student reviews pages

--- a/see_reviews.html
+++ b/see_reviews.html
@@ -12,6 +12,18 @@
       <!--link rel="stylesheet" href="css/app.css"-->
   </head>
   <body>
+  <div class="navbar-fixed">
+        <nav>
+          <div class="nav-wrapper tamu-navbar">
+            <a href="#" class="brand-logo">Ph.D. Review System</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <li ><a href="<?= getScriptUrl();?>?v=admin_view">Admin</a></li>
+              <li ><a href="<?= getScriptUrl();?>?v=faculty_view">Student Search</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
+            </ul>
+          </div>
+        </nav>
+  </div>
     <h3 style = "margin-left: 25px;">
       Reviews for the Student
     </h3>
@@ -46,6 +58,7 @@
       </tbody>
       </table>
     </div>
-
+    <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
