--- a/admin_js.html
+++ b/admin_js.html
@@ -1,3 +1,17 @@
-<script>
 
+<script>
+function onLoadAdmin() {
+    google.script.run.withSuccessHandler(onSuccessToGetActiveReviewYear).getActiveReviewYear();
+}
+
+function onSuccessToGetActiveReviewYear(result) {
+    if(result == "None") {
+        document.getElementById("end_current_review_year").classList.add('disabled');
+    }
+    else {
+        document.getElementById("review_year").disabled = true;
+        $('#review_year').prop("disabled", true);
+        document.getElementById("begin_review_year").classList.add('disabled');
+    }
+}
 </script>
