--- a/student_search_js.html
+++ b/student_search_js.html
@@ -8,6 +8,14 @@ function submitStudentReview() {
 }
 
 */
+document.getElementById("admin-view").style.visibility = "hidden";
+google.script.run.withSuccessHandler(hideAdminView).isAdmin();
+
+function hideAdminView(result) {
+  console.log(result);
+  if (result == true) //is not Admin!
+    document.getElementById("admin-view").style.visibility = "visible";
+}
 
 
 // ---------- slickgrid stuff ------------
