working admin page and fixed cv link in grid

--- a/add_student_review.html
+++ b/add_student_review.html
@@ -31,7 +31,7 @@
     
     <div id="upload-review" style = "margin-left: 10px;">
           <div>
-            <h4>Review for <?=lastName?>, <?=firstName?> (UIN: <?=uinValue?>)</h4>
+            <h4>Review for UIN: <?=uinValue?></h4>
             <label visible="false" class = "hide" id = "uinForThisPage" ><?=uinValue?></label>
             <br>
             <form class="col s12" >
