fixed student report and improvement plan links

--- a/add_student_review.html
+++ b/add_student_review.html
@@ -165,6 +165,8 @@
 
               </div>
               <a id="reviewSubmitButton" class="waves-effect waves-light btn">Submit</a>
+              <a id="viewStudentReport" class="waves-effect waves-light btn">View Student Report</a>
+              <a id="viewImprovementPlan" class="waves-effect waves-light btn">View Improvement Plan</a>
             </form>
           </div>
         </div>
