--- a/student_info_javascript.html
+++ b/student_info_javascript.html
@@ -109,7 +109,12 @@
     }
     
     M.updateTextFields()
-
+    google.script.run.withSuccessHandler(function(activeYear) {    
+      if(activeYear == "None") {
+        console.log(activeYear);
+        $('input').attr('disabled', true);
+      }
+    }).getActiveReviewYear();
   }
 
 function check_cv(){
