Revert "spreadsheet url rectified"
This reverts commit 81cc0948c89eed1add7471669d7ddb8c6d7b0a56.

--- a/add_student_review_js.html
+++ b/add_student_review_js.html
@@ -1,18 +1,25 @@
 
 <script>
 
-var adminMode = true;
-
+var adminMode = false;
+document.getElementById("adminOnlyNotes").style.display = 'none';
+document.getElementById("adminOnlyCheckboxes").style.display = 'none';
+document.getElementById("admin-view").style.visibility = "hidden";
+google.script.run.withSuccessHandler(setUser).isAdmin();
+function setUser(result) {
+  if (result == true) {//is Admin!
+    document.getElementById("admin-view").style.visibility = "visible";
+    adminMode = true;
+    document.getElementById("adminOnlyNotes").style.display = 'none';
+    document.getElementById("adminOnlyCheckboxes").style.display = 'none';    
+  }
+}
 function onLoadAddStudentReview() {
     // set current review year here
     /*document.getElementById("reviewYear").value = "2019";
     var elems = document.querySelectorAll('select');
     var instances = M.FormSelect.init(elems, {});*/
-    
-    if(!adminMode) {
-    document.getElementById("adminOnlyNotes").style.display = 'none';
-    document.getElementById("adminOnlyCheckboxes").style.display = 'none';
-    }
+   
     onChangeReviewYear();
 }
 
