--- a/see_reviews.html
+++ b/see_reviews.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
       <!--Let browser know website is optimized for mobile-->
-      <!--link rel="stylesheet" href="css/app.css"-->
+      <?!= include('css'); ?>
   </head>
   <body>
   <div class="navbar-fixed">
@@ -17,18 +17,19 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li ><a href="<?= getScriptUrl();?>?v=admin_view">Admin</a></li>
+              <li id="admin-view"><a href="<?= getScriptUrl();?>?v=admin_view">Admin</a></li>
               <li ><a href="<?= getScriptUrl();?>?v=faculty_view">Student Search</a></li>
               <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
         </nav>
   </div>
-    <h3 style = "margin-left: 25px;">
+  <div class="container">
+    <h3>
       Reviews for the Student
     </h3>
 
-    <div id="see_reviews-student" style = "margin-left: 25px; margin-right: 25px">
+    <div id="see_reviews-student">
       <table class="striped">
       <thead>
       <tr>
@@ -58,7 +59,18 @@
       </tbody>
       </table>
     </div>
+    <script>
+    document.getElementById("admin-view").style.visibility = "hidden";
+    google.script.run.withSuccessHandler(hideAdminView).isAdmin();
+
+    function hideAdminView(result) {
+      if (result == true) //is not Admin!
+        document.getElementById("admin-view").style.visibility = "visible";
+    }
+
+    </script>
     <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  </div>
   </body>
 </html>
