--- a/student_search_js.html
+++ b/student_search_js.html
@@ -9,7 +9,13 @@ function submitStudentReview() {
 
 */
 
+document.getElementById("admin-view").style.visibility = "hidden";
+google.script.run.withSuccessHandler(hideAdminView).isAdmin();
 
+function hideAdminView(result) {
+  if (result == true) //is not Admin!
+    document.getElementById("admin-view").style.visibility = "visible";
+}
 // ---------- slickgrid stuff ------------
 
 var grid;
