--- a/add_student_review.html
+++ b/add_student_review.html
@@ -68,7 +68,7 @@
                     <option value = "X">Not Rated (X)</option>
                     <option value = "U">Unsatisfactory (U)</option>
                     <option value = "N">Needs Improvement (N)</option>
-                    <option value = "S">Unsatisfactory (S)</option>
+                    <option value = "S">Satisfactory (S)</option>
                   </select>
                   <label>Rating</label>
                 </div>
