pulled puravs changes

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body onload = "onLoadAdmin()">
+  <body onload = "onLoadAddStudentReview()">
   <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper tamu-navbar">
@@ -29,22 +29,22 @@
         </nav>
   </div>
     
-    <div id="main-body" style = "margin-left: 10px;">
+    <div id="upload-review" style = "margin-left: 10px;">
           <div>
             <h5>Link to Spreadsheets </h5>
             <br>
             <div class = "row">
                 <div class = "col s3">
-                    <a id="student-personal-details" class="waves-effect waves-light btn" href = "https://docs.google.com/spreadsheets/d/1vSpjuhHL4BpCgV7-mdMYtCIVd4VfQpKHw16218awcV8/edit#gid=0">Student Personal Details</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Submitsfkdgyusiusj</a>
                 </div>
                 <div class = "col s3">
-                    <a id="student-review-details" class="waves-effect waves-light btn" href = "https://docs.google.com/spreadsheets/d/1Ndizu-BwuJ8-rexcruRsrPfot9mgVtP5RE1Qz6PDxFw/edit#gid=0">Student Review Details</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Submit</a>
                 </div>
                 <div class = "col s3">
-                    <a id="list-of-students-faculties" class="waves-effect waves-light btn" href = "https://docs.google.com/spreadsheets/d/1UWcbToPpGux2qT_u7YHJROfdH_jlSp4-apZGEs52w08/edit#gid=0">List of Students/Faculties</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Submit</a>
                 </div>
                 <div class = "col s3">
-                    <a id="review-year-information" class="waves-effect waves-light btn" href = "https://docs.google.com/spreadsheets/d/18EJyEDD-NufR0dtzzoXbA9mtvIQC-jr0zxF13IkWqIc/edit#gid=0">Review Year Information</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Submit</a>
                 </div>
             </div>
             <br>
@@ -52,38 +52,35 @@
             <br>
             <div class = "row">
                 <div class="input-field col s3">
-                    <input placeholder="e.g. 2020" id="new_review_year" type="text" class="validate">
-                    <label style = "font-size: 18px;">Enter new review year's name</label>
+                    <input placeholder="e.g. 2020" id="first_name" type="text" class="validate">
+                    <label style = "font-size: 18px;" for="first_name">Enter new review year's name</label>
                 </div>
                 <div class="input-field col s3">
-                    <a id="add_new_review_year" class="waves-effect waves-light btn">Add</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Add</a>
                 </div>
             </div>
             <br>
-            <h5>Begin/End a Review Year </h5>
+            <h5>Start/End a Review Year </h5>
             <div class = "row">
                 <div class="input-field col s3">
-                    <label style = "font-size: 18px;">Current Review Year: <?=getActiveReviewYear()?></label>
+                    <label style = "font-size: 18px;" for="first_name">Current Review Year: None</label>
                 </div>
                 <div class="input-field col s3">
-                    <a id="end_current_review_year" class="waves-effect waves-light btn">End</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn disabled">End</a>
                 </div>
             </div>
             <div class = "row">
                 <div class="input-field col s3">
-                  <select id = "review_year">
-                  <? for(var i = 0; i < review_years.length; i++) { ?>
-                  <option ><?=review_years[i]?></option>
-                  <? } ?>
-                    <!--option value = "2020">2020</option>
+                  <select id = "reviewYear" onchange = "onChangeReviewYear()">
+                    <option value = "2020">2020</option>
                     <option value = "2019">2019</option>
                     <option value = "2018">2018</option>
-                    <option value = "2017">2017</option-->
+                    <option value = "2017">2017</option>
                   </select>
                   <label>Review Year</label>
                 </div>
                 <div class="input-field col s3">
-                    <a id="begin_review_year" class="waves-effect waves-light btn">Begin this review year</a>
+                    <a id="reviewSubmitButton" class="waves-effect waves-light btn">Start this review year</a>
                 </div>
             </div>
             
