--- a/student_review.html
+++ b/student_review.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
   <html>
     <head>
+      <base target="_top">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
@@ -21,8 +22,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li><a href="<?= getScriptUrl();?>?page=student_info.html">Student Information</a></li>
               <li class="active"><a href="<?= getScriptUrl();?>?page=student_review.html">Reviews</a></li>
-              
-              <li><a href="index.html">Logout</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>              
             </ul>
           </div>
         </nav>
@@ -54,17 +54,17 @@
                   <input type="file" id="report">
                 </div>
                 <div class="file-path-wrapper s3">
-                  <input class="file-path validate" type="text">
+                  <input class="file-path validate" id = "rname" type="text">
                 </div>
               </div>
 
               <div class="file-field input-field s3">
                 <div class="btn">
                   <span>Add Improvement Plan</span>
-                  <input type="file" id="improvement" value="hello" >
+                  <input type="file" id="improvement">
                 </div>
                 <div class="file-path-wrapper s3">
-                  <input class="file-path validate" type="text">
+                  <input class="file-path validate" id = "iname" type="text">
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
           <div class="row">
             <div class="center">
                <a class="btn waves-effect waves-light cancel" onclick="reset_fields()"> Discard </a>
-              <button class="btn waves-effect waves-light" onclick="if(confirm('Are you sure?'))uploadClicked()"> Upload
+              <button class="btn waves-effect waves-light" onclick="if(confirm(' This will replace your current documents.. \n Are you sure?'))uploadClicked()"> Upload
               </button>
             </div>
           </div>
