--- a/student_search_js.html
+++ b/student_search_js.html
@@ -9,7 +9,13 @@ function submitStudentReview() {
 
 */
 
+document.getElementById("admin-view").style.visibility = "hidden";
+google.script.run.withSuccessHandler(hideAdminView).isAdmin();
 
+function hideAdminView(result) {
+  if (result == true) //is not Admin!
+    document.getElementById("admin-view").style.visibility = "visible";
+}
 // ---------- slickgrid stuff ------------
 
 var grid;
@@ -18,7 +24,7 @@ var columns = [
     name: 'UIN', 
     field: 'uin', 
     sortable: true, 
-    width: 110 
+    width: 120 
   },
   {
     id: 'name',
@@ -26,37 +32,37 @@ var columns = [
     field: 'name',
     sortable: true,
     toolTip: 'Really Really Really Long Title',
-    width: 210
+    width: 220
   },
   {
     id: 'advisor',
     name: 'Advisor',
     field: 'advisor',
     sortable: true,
-    width: 210
+    width: 220
   },
   {
     id: 'start_semester',
     name: 'Start Semester',
     field: 'start_semester',
     sortable: true,
-    width: 100
+    width: 130
   },
   {
     id: 'qual_exam',
     name: 'Qual Exam',
     field: 'qual_exam',
     sortable: true,
-    width: 80
+    width: 110
   },
   {
     id: 'degree_plan_submitted',
     name: 'Degree Plan Submitted',
     field: 'degree_plan_submitted',
     sortable: true,
-    width: 120
+    width: 150
   },
-  {
+  /*{
     id: 'student_report',
     name: 'Student Report',
     field: 'student_report',
@@ -69,13 +75,14 @@ var columns = [
     field: 'improvement_plan',
     sortable: true,
     width: 100
-  },
+  },*/
   {
     id: 'cv',
     name: 'CV',
     field: 'cv',
     sortable: true,
-    width: 100
+    formatter: linkFormatter,
+    width: 110
   },
   {
     id: 'more_student_details',
@@ -83,7 +90,7 @@ var columns = [
     field: 'more_student_details',
     sortable: false,
     formatter: linkFormatter,
-    width: 100
+    width: 120
   },
   {
     id: 'all_reviews',
@@ -91,7 +98,7 @@ var columns = [
     field: 'all_reviews',
     sortable: false,
     formatter: linkFormatter,
-    width: 90
+    width: 120
   },
   {
     id: 'add_review',
@@ -99,7 +106,7 @@ var columns = [
     field: 'add_review',
     sortable: false,
     formatter: linkFormatter,
-    width: 110  },
+    width: 120  },
 ];
 
 function dayFormatter(row, cell, value, columnDef, dataContext) {
@@ -175,9 +182,9 @@ $(function() {
       d["start_semester"] = all_student_records[i][6],
       d["qual_exam"] = all_student_records[i][12],
       d["degree_plan_submitted"] = all_student_records[i][11],
-      d["student_report"] = "NA",
-      d["improvement_plan"] = "NA",
-      d["cv"] = "NA",
+      //d["student_report"] = "NA",
+      //d["improvement_plan"] = "NA",
+      d["cv"] = "<a href=" + all_student_records[i][14] + "><u>CV</u></a>",
       console.log(scriptUrl + "?v=student_details&uin=" + all_student_records[i][4]);
       var t = "'" + scriptUrl + "?v=student_details&uin=" + all_student_records[i][4] +"'";
       console.log(t);
@@ -189,8 +196,13 @@ $(function() {
       var t = "'" + scriptUrl + "?v=see_reviews&uin=" + all_student_records[i][4] +"'";
       console.log(t);
       console.log("<a href=" + t + "<u>Details</u></a>");
-      d["all_reviews"] = "<a href=" + t + "><u>Details</u></a>",
-      d["add_review"] = "<a href=\"https://script.google.com#?v=add_review&uin=" + d["uin"] + "\" class=\"add-review-link\" style = \" color:blue;\"><u>Add Review</u></a>"
+      d["all_reviews"] = "<a href=" + t + "><u>Reviews</u></a>",
+      
+      console.log(scriptUrl + "?v=add_review&uin=" + all_student_records[i][4]);
+      var t = "'" + scriptUrl + "?v=add_review&uin=" + all_student_records[i][4] +"'";
+      console.log(t);
+      console.log("<a href=" + t + "<u>Details</u></a>");
+      d["add_review"] = "<a href=" + t + "><u>Add Review</u></a>"
       
       // data can also be populated this way:
       /*data[i] = {
