--- a/add_student_review_js.html
+++ b/add_student_review_js.html
@@ -10,8 +10,8 @@ function setUser(result) {
   if (result == true) {//is Admin!
     document.getElementById("admin-view").style.visibility = "visible";
     adminMode = true;
-    document.getElementById("adminOnlyNotes").style.display = 'none';
-    document.getElementById("adminOnlyCheckboxes").style.display = 'none';    
+    document.getElementById("adminOnlyNotes").style.display = 'initial';
+    document.getElementById("adminOnlyCheckboxes").style.display = 'initial';    
   }
 }
 function onLoadAddStudentReview() {
