--- a/see_reviews.html
+++ b/see_reviews.html
@@ -33,6 +33,7 @@
       <table class="striped">
       <thead>
       <tr>
+      <th>Reviewer</th>
       <th>Rating</th>
       <th>Review Year</th>
       <th>Review</th>
